# investment-guidance-app

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
specs/001-investment-guidance-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-investment-guidance-pipeline/checklists/: requirements.md
src/: cli.py
src/adapters/: alphavantage_adapter.py  base.py  finnhub_adapter.py  reddit_adapter.py  rss_adapter.py  telegram_adapter.py
src/config/: settings.py
src/models/: allocation.py  macro_signal.py  pipeline_run.py  state_log.py  stock.py
src/pipeline/: orchestrator.py
src/services/: allocation_service.py  analysis_service.py  barbell_service.py  monitor_service.py  sentiment_service.py  shortlist_service.py
supabase/migrations/: 001_initial_schema.sql
tests/: conftest.py
tests/contract/: test_financial_provider.py  test_macro_provider.py  test_notification_provider.py
tests/integration/: test_monitor_cycle.py  test_pipeline_end_to_end.py  test_state_log.py
tests/unit/: test_allocation_service.py  test_barbell_service.py  test_monitor_service.py  test_sentiment_service.py
